--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ marimo/_lsp/
 __marimo__/
 "notebook/raw_data.csv" 
 "notebook/cleaned_data.csv" 
+notebook/raw_data.csveuullcev
+artifacts/preprocessed_bundle.pkl
