--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ matplotlib
 seaborn
 wordcloud
 gdown
+Flask
+gunicorn
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
