--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -4,4 +4,4 @@ services:
     name: music-mind
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    startCommand: "gunicorn deployment.app:app"
