--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -3,5 +3,7 @@ services:
   - type: web
     name: music-mind
     env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    buildCommand: |
+      pip install -r requirements.txt 
+      python -m spacy download en_core_web_sm
+    startCommand: gunicorn app:app
