--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,12 @@
-aiofiles==24.1.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-asttokens==3.0.0
-attrs==25.3.0
-backcall==0.2.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-blinker==1.9.0
-blis==1.3.0
-cachetools==6.1.0
-catalogue==2.0.10
-certifi==2025.6.15
-charset-normalizer==3.4.2
-click==8.2.1
-cloudpathlib==0.21.1
-colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.2
-cycler==0.12.1
-cymem==2.0.11
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-dill==0.4.0
-docopt==0.6.2
--e git+https://github.com/KotlaSravanthi-eng/music_recommendation_system_based_on_emotion.git@c1bb550c2b2b30ee98a73835da5179e20aa4a57f#egg=emotion_based_music_recommendation_system
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-executing==2.2.0
-fastapi==0.115.12
-fastjsonschema==2.21.1
-ffmpy==0.5.0
-filelock==3.18.0
-Flask==3.1.1
-fonttools==4.58.5
-fsspec==2025.3.2
-gdown==5.2.0
-git-filter-repo==2.47.0
-gitdb==4.0.12
-GitPython==3.1.44
-gradio==5.29.0
-gradio_client==1.10.0
-groovy==0.1.2
-gunicorn==23.0.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.31.1
-idna==3.10
-ipykernel==6.29.5
-ipython==8.12.3
-ipython_pygments_lexers==1.1.1
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.1
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyterlab_pygments==0.3.0
-kiwisolver==1.4.8
-langcodes==3.5.0
-language_data==1.3.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.3
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.3
-murmurhash==1.0.13
-narwhals==1.45.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-numpy==2.3.1
-orjson==3.10.18
-packaging==25.0
-pandas==2.3.0
-pandocfilters==1.5.1
-parso==0.8.4
-pickleshare==0.7.5
-pillow==11.3.0
-pipreqs==0.5.0
-platformdirs==4.3.8
-preshed==3.0.10
-prompt_toolkit==3.0.51
-protobuf==6.31.1
-psutil==7.0.0
-pure_eval==0.2.3
-pyarrow==20.0.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-pydeck==0.9.1
-pydub==0.25.1
-Pygments==2.19.2
-pyparsing==3.2.3
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-multipart==0.0.20
-pytz==2025.2
-pywin32==310
-PyYAML==6.0.2
-pyzmq==27.0.0
-referencing==0.36.2
-requests==2.32.4
-rich==14.0.0
-rpds-py==0.26.0
-ruff==0.11.8
-safehttpx==0.1.6
-scikit-learn==1.7.0
-scipy==1.16.0
-seaborn==0.13.2
-semantic-version==2.10.0
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-smart_open==7.3.0.post1
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-stack-data==0.6.3
-starlette==0.46.2
-streamlit==1.46.1
-tenacity==9.1.2
-thinc==8.3.6
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-toml==0.10.2
-tomlkit==0.13.2
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.34.2
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-webencodings==0.5.1
-websockets==15.0.1
-Werkzeug==3.1.3
-wheel==0.45.1
-wordcloud==1.9.4
-wrapt==1.17.2
-yarg==0.1.9
+numpy
+pandas
+scikit-learn
+gdown
+spacy
+joblib
+matplotlib
+seaborn
+wordcloud
+Flask
+gunicorn
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
