--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -3,8 +3,13 @@ services:
   - type: web
     name: music-mind
     env: python
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.9.18
     buildCommand: |
       apt-get update -y
       apt-get install -y build-essential libblas-dev liblapack-dev gfortran python3.9-dev
+      apt-get clean 
+      rm -rf /var/lib/apt/lists/*
       pip install -r requirements.txt 
     startCommand: gunicorn app:app
