--- a/deployment/render.yaml
+++ b/deployment/render.yaml
@@ -8,7 +8,7 @@ services:
         value: 3.9.18
     buildCommand: |
       apt-get update -y
-      apt-get install -y build-essential libblas-dev liblapack-dev gfortran python3.9-dev
+      apt-get install -y build-essential libblas-dev liblapack-dev gfortran python3.9-dev libatlas-base-dev
       apt-get clean 
       rm -rf /var/lib/apt/lists/*
       pip install -r requirements.txt 
