--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ seaborn
 wordcloud
 Flask
 gunicorn
-en-core-web-sm==2.3.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
